--- a/package.json
+++ b/package.json
@@ -14,23 +14,25 @@
   "homepage": "https://github.com/htmlacademy-adaptive/121852-pink",
   "devDependencies": {
     "autoprefixer": "6.3.3",
+    "css-mqpacker": "^4.0.1",
     "editorconfig-tools": "0.1.1",
     "grunt": "0.4.5",
     "grunt-browser-sync": "2.2.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-watch": "0.6.1",
+    "grunt-csso": "^0.8.2",
     "grunt-postcss": "0.7.2",
     "grunt-sass": "1.1.0",
     "load-grunt-tasks": "3.4.1"
   },
   "scripts": {
     "test": "editorconfig-tools check *",
-    "build": "grunt sass && grunt postcss",
+    "build": "grunt build",
     "start": "npm run build && grunt serve"
   },
   "engines": {
     "node": "^5.0.0"
-  },
-  "dependencies": {
-    "normalize.scss": "^0.1.0"
   }
 }
