--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "grunt-csso": "^0.8.2",
     "grunt-postcss": "0.7.2",
     "grunt-sass": "1.1.0",
+    "grunt-svgmin": "^3.1.2",
+    "grunt-svgstore": "^1.0.0",
     "load-grunt-tasks": "3.4.1"
   },
   "scripts": {
